--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,6 +12,13 @@ spring:
       hibernate:
       # show_sql: true
         format_sql: true
+# page 글로벌 설정
+  data:
+    web:
+      pageable:
+        default-page-size: 10
+        max-page-size: 2000
+        one-indexed-parameters: true # page = 1 부터 문제 pageable api 값들이 안맞음 그냥 만들어서 써라 PageRequest 로만들어서
 logging.level:
   org.hibernate.SQL: debug
 # org.hibernate.type: trace
